--- a/package.json
+++ b/package.json
@@ -71,17 +71,17 @@
         "done-rainbow": "^0.1.2",
         "fs-extra": "^8.1.0",
         "glob": "^7.1.4",
-        "jest": "^24.9.0",
+        "jest": "^26.6.3",
         "jsdoc-babel": "^0.5.0",
         "jsdoc-to-markdown": "^5.0.2",
+        "jsdom": "^15.2.0",
         "npm-run-all": "^4.1.5",
         "rimraf": "^3.0.0",
+        "ssh2": "^0.8.6",
         "ts-jest": "^24.1.0",
         "tslib": "^1.10.0",
         "typescript": "^3.6.4",
-        "webpack": "^4.41.5",
-        "jsdom": "^15.2.0",
-        "ssh2": "^0.8.6"
+        "webpack": "^4.41.5"
     },
     "jest": {
         "setupFiles": [
